@@ -10,9 +10,6 @@ import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.Locale;
-import java.util.logging.Level;
-import java.util.logging.Logger;
 
 import ai.timefold.solver.core.api.solver.Solver;
 import ai.timefold.solver.core.enterprise.TimefoldSolverEnterpriseService;
@@ -29,20 +26,14 @@ import org.jline.terminal.TerminalBuilder;
 
 /**
  * Renders a live terminal dashboard while a solver runs, driven by phase/step lifecycle events.
- * Owns the terminal, the {@code System.out}/{@code System.err} redirection and the
- * {@code ai.timefold.solver} JUL logger level for the duration of one {@link #start} /
- * {@link #stop} pair; see {@link ai.timefold.solver.console.api.SolverConsole} for the documented
- * single-call-at-a-time contract.
+ * Owns the terminal and the {@code System.out}/{@code System.err} redirection.
  *
  * @param <Solution_> the solution type
  */
 public final class SolverDashboard<Solution_> extends PhaseLifecycleListenerAdapter<Solution_> {
 
-    private static final String TIMEFOLD_LOGGER_NAME = "ai.timefold.solver";
-    // One sample per repaint (REPAINT_PERIOD_MILLIS), so this is ~50 seconds of full-resolution
-    // history before the first halving; halved back down to this (not dropped) once doubled, so
-    // the sparkline always spans the whole run. Storage transiently ranges up to 2x this between
-    // halvings.
+    // One sample per repaint, so ~50s of full resolution before halving (not dropping) back to this limit;
+    // storage transiently ranges up to 2x this between halvings.
     private static final int SPARKLINE_HISTORY_LIMIT = 200;
     private static final int PHASE_HISTORY_LIMIT = 50;
     private static final long REPAINT_PERIOD_MILLIS = 250L;
@@ -56,21 +47,15 @@ public final class SolverDashboard<Solution_> extends PhaseLifecycleListenerAdap
     private volatile String phaseName;
     private volatile long stepIndex = -1L;
     private volatile String stepScoreText = "n/a";
-    // ponytail: em dash as a plain sentinel string rather than a shared constant; only used here and
-    // in the two spots that reset it. Promote to a constant if a third caller shows up.
     private volatile String acceptedPercentText = "—";
 
-    // Labels and per-level history are populated lazily on the first non-null best score, since the
-    // score definition (and therefore the level count) isn't known before solving starts. Both are
-    // only ever touched from inside paintFrame(), itself only ever invoked while holding this
-    // dashboard's own monitor (see repaint()/stop()), so no separate lock is needed here.
+    // Populated lazily on the first non-null best score (level count is unknown before that). Touched only
+    // from paintFrame(), always under this dashboard's monitor, so no separate lock is needed.
     private List<String> scoreLevelLabels;
     private final List<ArrayDeque<Double>> bestScoreHistoryPerLevel = new ArrayList<>();
     private final List<String> finishedPhaseLines = Collections.synchronizedList(new ArrayList<>());
 
-    // Written and read only from the solving thread (accumulated in stepEnded()/phaseEnded(),
-    // read once in stop() right after solver.solve() returns on that same thread): no volatile
-    // or synchronization needed, unlike the fields above that the repaint thread also reads.
+    // Written and read only from the solving thread; no volatile/synchronization needed, unlike the fields above.
     private long totalSteps;
     private long totalAcceptedMoveCount;
     private long totalSelectedMoveCount;
@@ -78,7 +63,6 @@ public final class SolverDashboard<Solution_> extends PhaseLifecycleListenerAdap
     private Terminal terminal;
     private PrintStream originalOut;
     private PrintStream originalErr;
-    private Level originalJulLevel;
     private Thread repaintThread;
     private Thread keyThread;
     private volatile boolean running;
@@ -95,7 +79,6 @@ public final class SolverDashboard<Solution_> extends PhaseLifecycleListenerAdap
     // ************************************************************************
 
     public void start() {
-        failFastUnderQuarkusDevMode();
         try {
             terminal = TerminalBuilder.builder().build();
         } catch (IOException e) {
@@ -103,9 +86,8 @@ public final class SolverDashboard<Solution_> extends PhaseLifecycleListenerAdap
         }
         if (terminal.getType().startsWith(Terminal.TYPE_DUMB)) {
             closeTerminalQuietly();
-            throw new IllegalStateException(
-                    "SolverConsole requires an interactive terminal; it cannot render to a piped, "
-                            + "redirected or non-interactive output. Run it directly in a terminal.");
+            throw new IllegalStateException("SolverConsole requires an interactive terminal; it cannot render to a piped, "
+                    + "redirected or non-interactive output. Run it directly in a terminal.");
         }
         try {
             redirectOutput();
@@ -123,8 +105,7 @@ public final class SolverDashboard<Solution_> extends PhaseLifecycleListenerAdap
             keyThread.setDaemon(true);
             keyThread.start();
         } catch (RuntimeException | Error e) {
-            // Nothing acquired above (the redirected output, the raw terminal mode, the threads) may
-            // outlive a failed start(): each would otherwise leak for the rest of the JVM's life.
+            // Nothing acquired above may outlive a failed start(), or it leaks for the rest of the JVM's life.
             running = false;
             restoreOutput();
             closeTerminalQuietly();
@@ -133,21 +114,19 @@ public final class SolverDashboard<Solution_> extends PhaseLifecycleListenerAdap
     }
 
     /**
-     * @param solved false if {@code solver.solve()} threw rather than returning; skips the final
-     *        summary box, since the solver scope it would report on may be left inconsistent
+     * @param solved false if {@code solver.solve()} threw rather than returning;
+     *        skips the final summary box, since the solver scope it would report on may be left inconsistent
      */
     public void stop(boolean solved) {
         int terminalWidth;
-        // Also entered by repaint() (the repaint thread and the WINCH resize handler): serializes
-        // every terminal write and guarantees none of them can still be in flight once this method
-        // closes the terminal below.
+        // Also entered by repaint(): serializes terminal writes so none is in flight once this closes the terminal.
         synchronized (this) {
             running = false;
             repaintThread.interrupt();
             keyThread.interrupt();
             terminalWidth = terminal.getSize().getColumns();
             if (quitRequested) {
-                // The dashboard box would otherwise linger above the summary printed below.
+                // Otherwise the dashboard box would linger above the summary printed below.
                 var writer = terminal.writer();
                 writer.print(CLEAR_SCREEN);
                 writer.flush();
@@ -168,7 +147,6 @@ public final class SolverDashboard<Solution_> extends PhaseLifecycleListenerAdap
             System.out.println("Solving did not complete; see the log for details.");
         }
         System.out.println();
-        System.out.println("Log written to " + logFile.toAbsolutePath());
     }
 
     private String finalScoreText() {
@@ -181,19 +159,11 @@ public final class SolverDashboard<Solution_> extends PhaseLifecycleListenerAdap
         var title = bestScore == null ? "NO SOLUTION FOUND"
                 : bestScore.isFullyAssigned() && bestScore.raw().isFeasible() ? "FEASIBLE SOLUTION FOUND"
                         : "INFEASIBLE SOLUTION FOUND";
-        var acceptanceText = totalSelectedMoveCount == 0L
-                ? "n/a"
-                : String.format(Locale.US, "%.1f %%", 100.0 * totalAcceptedMoveCount / totalSelectedMoveCount);
-        return new FinalSummary(
-                title,
-                finalScoreText(),
-                totalSteps,
-                solverScope.getTimeMillisSpent(),
-                solverScope.getMoveEvaluationCount(),
-                solverScope.getMoveEvaluationSpeed(),
-                totalAcceptedMoveCount,
-                acceptanceText,
-                solverScope.getScoreCalculationCount());
+        var acceptanceText = totalSelectedMoveCount == 0L ? "n/a"
+                : String.format("%.1f %%", 100.0 * totalAcceptedMoveCount / totalSelectedMoveCount);
+        return new FinalSummary(title, finalScoreText(), totalSteps, solverScope.getTimeMillisSpent(),
+                solverScope.getMoveEvaluationCount(), solverScope.getMoveEvaluationSpeed(), totalAcceptedMoveCount,
+                acceptanceText, solverScope.getScoreCalculationCount());
     }
 
     // ************************************************************************
@@ -211,8 +181,7 @@ public final class SolverDashboard<Solution_> extends PhaseLifecycleListenerAdap
     @Override
     public void stepEnded(AbstractStepScope<Solution_> stepScope) {
         stepIndex = stepScope.getStepIndex();
-        // AbstractStepScope.score stays unset for exhaustive search (its score lives on the
-        // expanding node instead) and for any custom phase; fall back to n/a rather than NPE.
+        // Unset for exhaustive search (score lives on the expanding node) and custom phases; fall back below.
         InnerScore<?> stepScore = stepScope.getScore();
         if (stepScore == null && stepScope instanceof ExhaustiveSearchStepScope<Solution_> exhaustiveStepScope) {
             stepScore = exhaustiveStepScope.getStartingStepScore();
@@ -222,15 +191,12 @@ public final class SolverDashboard<Solution_> extends PhaseLifecycleListenerAdap
             var accepted = localSearchStepScope.getAcceptedMoveCount();
             var selected = localSearchStepScope.getSelectedMoveCount();
             if (accepted != null && selected != null) {
-                // Construction heuristic steps have a selected count but no acceptor, so no accepted
-                // count; only local search steps have both. Summing selected-without-accepted moves
-                // into these running totals would understate the final acceptance percentage.
+                // Construction heuristic steps have selected but no accepted count; only local search has both.
                 totalAcceptedMoveCount += accepted;
                 totalSelectedMoveCount += selected;
             }
-            acceptedPercentText = (accepted == null || selected == null || selected == 0L)
-                    ? "—"
-                    : String.format(Locale.US, "%.1f %%", 100.0 * accepted / selected);
+            acceptedPercentText = (accepted == null || selected == null || selected == 0L) ? "—"
+                    : String.format("%.1f %%", 100.0 * accepted / selected);
         } else {
             acceptedPercentText = "—";
         }
@@ -239,23 +205,17 @@ public final class SolverDashboard<Solution_> extends PhaseLifecycleListenerAdap
     @Override
     public void phaseEnded(AbstractPhaseScope<Solution_> phaseScope) {
         totalSteps += phaseScope.getNextStepIndex(); // Steps are re-indexed from 0 per phase.
-        // ponytail: phaseScope.endingSystemTimeMillis is not set yet when this listener fires
-        // (DefaultLocalSearchPhase.phaseEnded() fires listeners before calling phaseScope.endingNow()),
-        // so getPhaseMoveEvaluationSpeed()/getPhaseTimeMillisSpent() would NPE here. Compute the speed
-        // from the "up to now" variants instead, which only need startingSystemTimeMillis.
         var phaseTimeMillisSpent = phaseScope.calculatePhaseTimeMillisSpentUpToNow();
-        var phaseMoveEvaluationSpeed = phaseScope.getPhaseMoveEvaluationCount() * 1000L
-                / (phaseTimeMillisSpent == 0L ? 1L : phaseTimeMillisSpent);
-        var line = String.format(Locale.US, "%s  %s ended: %d steps, %,d/s, score %s",
+        var phaseMoveEvaluationSpeed =
+                phaseScope.getPhaseMoveEvaluationCount() * 1000L / (phaseTimeMillisSpent == 0L ? 1L : phaseTimeMillisSpent);
+        var line = String.format("%s  %s ended: %d steps, %,d/s, score %s",
                 DashboardRenderer.formatElapsed(phaseScope.calculateSolverTimeMillisSpentUpToNow()),
-                phaseScope.getPhaseId().simpleProducerName(),
-                phaseScope.getNextStepIndex(),
-                phaseMoveEvaluationSpeed,
+                phaseScope.getPhaseId().simpleProducerName(), phaseScope.getNextStepIndex(), phaseMoveEvaluationSpeed,
                 phaseScope.getBestScore().raw());
         synchronized (finishedPhaseLines) {
             finishedPhaseLines.add(line);
             while (finishedPhaseLines.size() > PHASE_HISTORY_LIMIT) {
-                finishedPhaseLines.remove(0);
+                finishedPhaseLines.removeFirst();
             }
         }
     }
@@ -291,12 +251,8 @@ public final class SolverDashboard<Solution_> extends PhaseLifecycleListenerAdap
         }
     }
 
-    // Synchronized so the repaint thread, the WINCH resize handler and stop()'s own final frame can
-    // never write to the terminal concurrently or after stop() has closed it: the running check runs
-    // under the same lock stop() takes before closing, so a call arriving after stop() started is
-    // guaranteed to see running == false and return without touching the terminal.
-    // ponytail: one lock, four frames a second; revisit if the repaint cadence ever needs to be
-    // much higher.
+    // Synchronized so no writer (repaint thread, WINCH handler, stop()'s final frame) touches the terminal
+    // concurrently or after stop() closes it.
     private synchronized void repaint() {
         if (!running) {
             return;
@@ -318,12 +274,9 @@ public final class SolverDashboard<Solution_> extends PhaseLifecycleListenerAdap
     }
 
     /**
-     * Samples once per repaint (a fixed wall-clock cadence, {@value #REPAINT_PERIOD_MILLIS} ms)
-     * rather than once per step, so the sparkline's length always reflects elapsed time, not step
-     * count: a phase doing thousands of fast steps per second no longer dominates the chart while a
-     * phase doing a handful of slow steps per second is squeezed to almost nothing, even though both
-     * took the same real time. Sampling unconditionally (not only on improvement) means a genuine
-     * plateau still advances the chart as flat, instead of the timeline silently skipping over it.
+     * Samples once per repaint (fixed wall-clock cadence), not once per step,
+     * so the sparkline's length reflects elapsed time rather than step count,
+     * and unconditionally so a genuine plateau still shows as flat.
      */
     void recordBestScoreSample() {
         var bestScore = solverScope.getBestScore();
@@ -332,8 +285,7 @@ public final class SolverDashboard<Solution_> extends PhaseLifecycleListenerAdap
         }
         var levels = bestScore.raw().toLevelDoubles();
         if (scoreLevelLabels == null) {
-            // The score definition (and therefore the level count) isn't known before solving starts,
-            // so both are populated here, on the first sample, rather than in the constructor.
+            // Level count is unknown before solving starts, so populate here on first sample, not in the constructor.
             scoreLevelLabels = buildScoreLevelLabels(levels.length);
             for (var i = 0; i < levels.length; i++) {
                 bestScoreHistoryPerLevel.add(new ArrayDeque<>());
@@ -343,11 +295,8 @@ public final class SolverDashboard<Solution_> extends PhaseLifecycleListenerAdap
             var history = bestScoreHistoryPerLevel.get(i);
             history.addLast(levels[i]);
             if (history.size() >= 2 * SPARKLINE_HISTORY_LIMIT) {
-                // Halve only once the history has grown to exactly double the limit, so every bucket
-                // merges exactly 2:1 with no rounding remainder. Squeezing down by 1 every single step
-                // instead (a barely-over-capacity "201 into 200" downsample) always lands its one
-                // uneven bucket at the tail, turning the newest bucket into a decaying exponential
-                // moving average that stops responding to new data while older buckets never change.
+                // Halve only at exactly double the limit, so every bucket merges 2:1 with no rounding remainder
+                // (downsampling by 1 each step instead would stick the newest bucket at a stale average).
                 var compacted = DashboardRenderer.downsample(List.copyOf(history), SPARKLINE_HISTORY_LIMIT);
                 history.clear();
                 history.addAll(compacted);
@@ -356,16 +305,14 @@ public final class SolverDashboard<Solution_> extends PhaseLifecycleListenerAdap
     }
 
     /**
-     * Indexed the same way as {@link #bestScoreHistoryPerLevel}, one label per score level (e.g.
-     * {@code hard}, {@code medium}, {@code soft}), the same way {@code ProblemBenchmarkResult} in
-     * {@code tools/benchmark} labels score levels in its own reports.
+     * One label per score level (e.g. {@code hard}, {@code medium}, {@code soft}), indexed like
+     * {@link #bestScoreHistoryPerLevel}.
      */
     private List<String> buildScoreLevelLabels(int levelCount) {
         var rawLabels = solverScope.getScoreDefinition().getLevelLabels();
         var labels = new ArrayList<String>(levelCount);
         for (var rawLabel : rawLabels) {
-            labels.add(rawLabel.endsWith(" score") ? rawLabel.substring(0, rawLabel.length() - " score".length())
-                    : rawLabel);
+            labels.add(rawLabel.endsWith(" score") ? rawLabel.substring(0, rawLabel.length() - " score".length()) : rawLabel);
         }
         return List.copyOf(labels);
     }
@@ -384,48 +331,41 @@ public final class SolverDashboard<Solution_> extends PhaseLifecycleListenerAdap
         var elapsedMillis = startingMillis == null ? 0L : solverScope.calculateTimeMillisSpentUpToNow();
         var bestScore = solverScope.getBestScore();
         var problemSizeStatistics = solverScope.getProblemSizeStatistics();
-        return new DashboardSnapshot(
-                elapsedMillis,
-                phaseName,
-                stepIndex,
-                bestScore == null ? "n/a" : bestScore.raw().toString(),
-                stepScoreText,
-                acceptedPercentText,
-                solverScope.getMoveEvaluationSpeed(),
-                solverScope.getMoveEvaluationCount(),
+        return new DashboardSnapshot(elapsedMillis, phaseName, stepIndex,
+                bestScore == null ? "n/a" : bestScore.raw().toString(), stepScoreText, acceptedPercentText,
+                solverScope.getMoveEvaluationSpeed(), solverScope.getMoveEvaluationCount(),
                 problemSizeStatistics == null ? 0L : problemSizeStatistics.entityCount(),
                 problemSizeStatistics == null ? 0L : problemSizeStatistics.variableCount(),
                 problemSizeStatistics == null ? 0L : problemSizeStatistics.approximateValueCount(),
                 problemSizeStatistics == null ? null : problemSizeStatistics.approximateProblemScaleAsFormattedString(),
-                levelLabelsSnapshot,
-                List.copyOf(historySnapshot),
-                phaseLinesSnapshot);
+                levelLabelsSnapshot, List.copyOf(historySnapshot), phaseLinesSnapshot);
     }
 
     // ************************************************************************
     // Environment guards
     // ************************************************************************
 
-    private void failFastUnderQuarkusDevMode() {
+    /**
+     * @return true under {@code quarkus:dev}, whose own raw-mode stdin hotkey handler would otherwise conflict
+     *         with the dashboard's; logs a message explaining why the dashboard is skipped.
+     */
+    public static boolean isDisabledUnderQuarkusDevMode() {
         try {
             var launchModeClass = Class.forName("io.quarkus.runtime.LaunchMode");
             var current = launchModeClass.getMethod("current").invoke(null);
-            if ("DEVELOPMENT".equals(current.toString())) {
-                throw new IllegalStateException(
-                        "SolverConsole cannot run under `quarkus:dev`: dev mode's own raw-mode stdin hotkey "
-                                + "handler conflicts with the dashboard's. Run the built application instead "
-                                + "(`java -jar target/quarkus-app/quarkus-run.jar`).");
+            if (!"DEVELOPMENT".equals(current.toString())) {
+                return false;
             }
         } catch (ClassNotFoundException e) {
-            // Not a Quarkus application; nothing to check.
+            return false; // Not a Quarkus application.
         } catch (ReflectiveOperationException e) {
-            // Quarkus is present but its LaunchMode API changed shape; don't block on a best-effort check.
+            return false; // Quarkus is present but its LaunchMode API changed shape; don't block on a best-effort check.
         }
+        return true;
     }
 
     private void redirectOutput() {
-        // Opened before anything is assigned, so a failure here leaves originalOut null and
-        // restoreOutput() a no-op instead of closing the real System.out it never actually replaced.
+        // Opened before assigning originalOut, so a failure here leaves restoreOutput() a no-op.
         PrintStream logStream;
         try {
             logStream = new PrintStream(new FileOutputStream(logFile.toFile()), true, StandardCharsets.UTF_8);
@@ -436,9 +376,6 @@ public final class SolverDashboard<Solution_> extends PhaseLifecycleListenerAdap
         originalErr = System.err;
         System.setOut(logStream);
         System.setErr(logStream);
-        var timefoldLogger = Logger.getLogger(TIMEFOLD_LOGGER_NAME);
-        originalJulLevel = timefoldLogger.getLevel();
-        timefoldLogger.setLevel(Level.OFF);
     }
 
     private void restoreOutput() {
@@ -447,7 +384,6 @@ public final class SolverDashboard<Solution_> extends PhaseLifecycleListenerAdap
             System.setOut(originalOut);
             System.setErr(originalErr);
             redirected.close();
-            Logger.getLogger(TIMEFOLD_LOGGER_NAME).setLevel(originalJulLevel);
         }
     }
 
